Improve int completion